--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
+sudo: false
+cache: bundler
 language: ruby
 rvm:
   - 2.2.0
   - 2.1.0
   - 2.0.0
+notifications:
+  email: false
+script: xvfb-run bundle exec rake
+addons:
+  apt:
+    sources:
+      - ubuntu-sdk-team
+    packages:
+      - libqt5webkit5-dev 
+      - qtdeclarative5-dev
