Use Selenium instead of webkit due to Travis whitelisting package issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,7 @@ rvm:
   - 2.0.0
 notifications:
   email: false
-script: xvfb-run bundle exec rake
 addons:
-  apt:
-    sources:
-      - ubuntu-sdk-team
-    packages:
-      - libqt5webkit5-dev 
-      - qtdeclarative5-dev
+  firefox: "39.0"
+script: xvfb-run bundle exec rake
 after_failure: "cat test.log"
